suppression fichiers inutiles et modification readme